--- a/style.css
+++ b/style.css
@@ -8,37 +8,29 @@ h1
 	font-size: 50px;
 }
 
-h2
-{
-	font-size: 30px;
-}
 
 #lisiere
 {
-	display: flex; /*création conteneur flex*/	
-	flex-direction: column; /*Disposition colonne*/
-	align-content: flex-start;	
+
 	background-color: teal;
-    padding: 12px; /* Marge intérieure de 12px */    
-	float: left;
-	width: 30% /* largeur du secteur*/
-	margin-bottom: -1000px;   /*taille de la marge extérieure*/
-    padding-bottom: 893px;  /*taille de la marge intérieure*/
-	box-sizing: border-box;    
+	box-sizing: border-box;
 	border-left: 2px solid black;
     border-right: 2px solid black;
     border-bottom:2px solid black; /*bordure du bas */
-    border-top:2px solid black; /* bordure du haut */    
+    border-top:2px solid black; /* bordure du haut */
+    padding: 12px; /* Marge intérieure de 12px */    
+	float: left;
+	width: 30% /* largeur du secteur*/
+	margin-bottom: -1000px;   /* astuce du margin et du padding pour que les deux divs aient la même longueur. */
+    padding-bottom: 703px;
+
+
     /*word-wrap: break-word;*/
 }
 
 
 #informations 
 {
-
-	display: flex; /*création conteneur flex*/
-	flex-direction: column;
-	align-content: flex-start;	
 	border-left: 2px solid black;
     border-right: 2px solid black;
     border-bottom:2px solid black; /*bordure du bas */
@@ -47,6 +39,7 @@ h2
 	float: right;
 	width: 65%; /* largeur du secteur*/
 	background-color: aqua;
+
 
     /*word-wrap: break-word;*/
 }
