--- a/style.css
+++ b/style.css
@@ -3,15 +3,26 @@ body
 
 }
 
+
+/*       ///////Code pour les écrans ordi ////////       */
+
 h1
 {
 	font-size: 50px;
 }
 
+h3
+{
+	font-size: 35px;
+}
+
+
 
 #lisiere
 {
 
+	display: flex;
+	flex-direction: column;
 	background-color: teal;
 	box-sizing: border-box;
 	border-left: 2px solid black;
@@ -20,17 +31,15 @@ h1
     border-top:2px solid black; /* bordure du haut */
     padding: 12px; /* Marge intérieure de 12px */    
 	float: left;
-	width: 30% /* largeur du secteur*/
-	margin-bottom: -1000px;   /* astuce du margin et du padding pour que les deux divs aient la même longueur. */
-    padding-bottom: 703px;
-
-
+	width: 30%; /* largeur du secteur*
     /*word-wrap: break-word;*/
 }
 
 
 #informations 
 {
+	display: flex;
+	flex-direction: column;
 	border-left: 2px solid black;
     border-right: 2px solid black;
     border-bottom:2px solid black; /*bordure du bas */
@@ -41,10 +50,27 @@ h1
 	background-color: aqua;
 
 
-    /*word-wrap: break-word;*/
+
+}
+
+#competences
+{
+	overflow: auto;
+	word-wrap: break-word;
+}
+
+#contact
+{
+	overflow: auto;
+	word-wrap: break-word;	
 }
 
 
+.PhotoProfil
+{
+	overflow: auto;
+	word-wrap: break-word;		
+}
 .TitreCV
 {
 	background-color: silver;
@@ -87,3 +113,116 @@ h1
 }
 
 
+/*       ///////Code pour les petits écrans////////       */
+@media screen and (max-width: 1280px)
+{
+    h1
+	{
+		font-size: 50px;
+	}
+
+	h3
+	{
+		font-size: 35px;
+	}
+
+	#cvsection
+	{
+		display: flex;
+		flex-direction: column-reverse;
+		flex : auto	;
+	    background-color: white;	
+	}
+	#paragraphelisiere 
+	{
+		display: flex;
+		flex :1;
+		width: auto;
+		flex-direction: column; /* ajuste la largeur du bandeau lisiere à celui de l'écran*/
+	}
+	#lisiere
+	{
+		display: flex;
+		flex-direction: column;
+		width: auto;/* largeur du secteur*/		
+		background-color: gray;
+		box-sizing: border-box;
+		border-left: 2px solid black;
+    	border-right: 2px solid black;
+    	border-bottom:2px solid black; /*bordure du bas */
+    	border-top:2px solid black; /* bordure du haut */
+    	padding: 12px; /* Marge intérieure de 12px */    
+
+
+	   	
+    	/*word-wrap: break-word;*/
+	}
+
+
+	#informations 
+	{
+		display: flex;
+		flex-direction: column;	
+		width: auto; /* largeur du secteur*/
+		background-color: aqua;		
+		border-left: 2px solid black;
+    	border-right: 2px solid black;
+    	border-bottom:2px solid black; /*bordure du bas */
+    	border-top:2px solid black; /* bordure du haut */
+    	padding: 12px; /* Marge intérieure de 12px */    
+
+
+	}
+
+
+	.TitreCV
+	{
+		background-color: silver;
+		text-decoration: underline; 
+		font-size: 40px;
+		font-family : "Times New Roman";
+		color: blue;
+	}
+
+	.poste
+	{
+		font-size: 30px;
+		font-family : Georgia ;
+	}
+
+	.diplome
+	{
+		font-size: 14px;
+		font-family : Georgia;
+		color: maroon;	
+   	 font-weight: bold;
+	}
+
+	.etablissement
+	{
+		color: red;
+		font-size: 16px;
+	}
+
+	.date
+	{
+		color: purple;
+	}
+
+	#competences
+	{
+		display: flex;
+		overflow: auto;
+		word-wrap: break-word;
+		flex-direction: column-reverse;
+	}
+
+	#contact
+	{
+		display: flex;
+		overflow: auto;
+		word-wrap: break-word;	
+		flex-direction: column-reverse;	
+	}
+
+}
