--- a/style.css
+++ b/style.css
@@ -12,16 +12,27 @@ h1
     text-align: center;	
 }
 
-h3
+h2
 {
-	font-size: 35px;
+	font-size: 30px;
+	font-family : Georgia ;
 }
 
+h3
+{
+	font-size: 20px;
+	padding-left: 245px;
+    font-weight: normal;
+}
 
+#cvsection
+{
+	position: relative;
+}
 
 #lisiere
 {
-
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	background-color: teal;
@@ -32,6 +43,7 @@ h3
     border-top:2px solid black; /* bordure du haut */
     padding: 12px; /* Marge intérieure de 12px */    
 	float: left;
+	height: 100%;
 	width: 30%; /* largeur du secteur*
     /*word-wrap: break-word;*/
 }
@@ -39,6 +51,7 @@ h3
 
 #informations 
 {
+	position: relative;	
 	display: flex;
 	flex-direction: column;
 	border-left: 2px solid black;
@@ -62,10 +75,20 @@ h3
 
 #contact
 {
-	overflow: auto;
+	overflow: auto; /*Coupe le bloc si dépassement des mots du cadre*/
 	word-wrap: break-word;	
 }
 
+/*.fas.fa-map-marked-alt
+{	
+	font-size: 62px;
+
+}*/
+
+.PhotoProfilSmart
+{
+	display: none;
+}
 
 .PhotoProfil
 {
@@ -81,9 +104,8 @@ h3
 	color: blue;
 }
 
-.poste
+.descriptifposte
 {
-	font-size: 30px;
 	font-family : Georgia ;
 }
 
@@ -95,37 +117,42 @@ h3
     font-weight: bold;
 }
 
-/*.missions
+.missions
 {
-	font-size: 12px;
-	font-family : Georgia;
-	color: white;	
-}/*/
+
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	width: 70%;
+	float: right;
+  	
+}
 
 .etablissement
 {
+
 	color: red;
+	float: right;
+	display: flex;
+	flex-direction: row;
 	font-size: 16px;
+	width: 72%;
 }
 
 .date
 {
+	display: flex;
+	flex-direction: row;
+    flex-wrap: nowrap;
+	float: left;	
 	color: purple;
+	width: 180px;
 }
 
 
 /*       ///////Code pour les petits écrans////////       */
 @media screen and (max-width: 1280px)
 {
-    h1
-	{
-		font-size: 50px;
-	}
-
-	h3
-	{
-		font-size: 35px;
-	}
 
 	#cvsection
 	{
@@ -134,29 +161,12 @@ h3
 		flex : auto	;
 	    background-color: white;	
 	}
-	#paragraphelisiere 
-	{
-		display: flex;
-		flex :1;
-		width: auto;
-		flex-direction: column; /* ajuste la largeur du bandeau lisiere à celui de l'écran*/
-	}
+
 	#lisiere
 	{
-		display: flex;
-		flex-direction: column;
-		width: auto;/* largeur du secteur*/		
+		flex-direction: column;	
 		background-color: gray;
-		box-sizing: border-box;
-		border-left: 2px solid black;
-    	border-right: 2px solid black;
-    	border-bottom:2px solid black; /*bordure du bas */
-    	border-top:2px solid black; /* bordure du haut */
-    	padding: 12px; /* Marge intérieure de 12px */    
-
-
-	   	
-    	/*word-wrap: break-word;*/
+    	width: 100%;  
 	}
 
 
@@ -164,31 +174,22 @@ h3
 	{
 		display: flex;
 		flex-direction: column;	
-		width: auto; /* largeur du secteur*/
 		background-color: aqua;		
-		border-left: 2px solid black;
-    	border-right: 2px solid black;
-    	border-bottom:2px solid black; /*bordure du bas */
-    	border-top:2px solid black; /* bordure du haut */
-    	padding: 12px; /* Marge intérieure de 12px */    
+    	padding: 12px; /* Marge intérieure de 12px */  
+    	width: 100%;    
 
 
 	}
-
-
-	.TitreCV
+	.PhotoProfilDesktop
 	{
-		background-color: silver;
-		text-decoration: underline; 
-		font-size: 40px;
-		font-family : "Times New Roman";
-		color: blue;
+		display: none;
 	}
 
-	.poste
+	.PhotoProfilSmart
 	{
-		font-size: 30px;
-		font-family : Georgia ;
+		display: block;
+	    text-align: center;		
+
 	}
 
 	.diplome
@@ -196,13 +197,7 @@ h3
 		font-size: 14px;
 		font-family : Georgia;
 		color: maroon;	
-   	 font-weight: bold;
-	}
-
-	.etablissement
-	{
-		color: red;
-		font-size: 16px;
+   	 	font-weight: bold;
 	}
 
 	.date
@@ -217,13 +212,5 @@ h3
 		word-wrap: break-word;
 		flex-direction: column-reverse;
 	}
-
-	/*#contact
-	{
-		display: flex;
-		overflow: auto;
-		word-wrap: break-word;	
-		flex-direction: column-reverse;	
-	}*/
 
 }
