--- a/style.css
+++ b/style.css
@@ -176,22 +176,29 @@ h3
 {
 	body
 	{
-		position: relative;
+		position: static;
+	}
+
+	h3
+	{
+		text-align: left;
+		padding-left: 50px;
 	}
 
 	#cvsection
 	{
-		position: absolute;
+		position: static;
 		display: flex;
 		flex-direction: column-reverse;
-		flex : auto	;
+		flex : none	;
 	    background-color: white;	
 	    width: 100%;
 	}
 
 	#lisiere
 	{
-		position: relative;		
+		position: static;		
+		position: none;
 		flex-direction: column;	
 		background-color: gray;
     	width: 100%;  
@@ -200,29 +207,31 @@ h3
 
 	#informations 
 	{
-		position: relative;
+		position: static;		
+		position: none;
 		display: flex;
 		flex-direction: column;	
 		background-color: aqua;		
     	padding: 12px; /* Marge intérieure de 12px  */ 
-    	width: auto;    
-
-
+    	width: auto;
 	}
+
 	.PhotoProfilDesktop
 	{
 		display: none;
 	}
 
 	#legendephotodesktop
-{
+	{
 	display: none;
-}
+	}
 
 
 	#legendephotosmart
 	{
-		margin-left: 400px;
+		display: block;
+		margin-left: 70px;
+
 
 	}
 
@@ -230,7 +239,7 @@ h3
 	{
 		display: block;
    		overflow:hidden;
-   		margin-left: 370px;
+   		margin-left: 45px;
     	position: relative;
   		width : 150px;
   		height: 150px;    
