--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-body
-{
+body{
 	position: relative;
-
+	margin : 3%;
 }
 
 
@@ -10,7 +9,9 @@ body
 h1
 {
 	font-size: 50px;
-    text-align: center;	
+	margin-bottom: 0%;
+    text-align: left;
+	margin-bottom: -5%;    	
 }
 
 h2
@@ -21,15 +22,27 @@ h2
 
 h3
 {
-	font-size: 20px;
-	padding-left: 245px;
+	font-size: 18px;
+	text-align: center;
     font-weight: normal;
+    margin-top: -1%;
+}
+
+h2 #titreposte
+{
+	text-decoration: underline;
+	text-decoration-color: teal;	
+
 }
 
 #cvsection
 {
 	position: absolute;
 	width: 100%;
+    border-top:2px solid black; /* bordure du haut */	
+    border-bottom:2px solid black; /*bordure du bas */  
+	border-left: 2px solid black; 
+	border-right: 2px solid black; 	
 }
 
 #lisiere
@@ -37,17 +50,17 @@ h3
 	position: absolute; 
 	display: flex;
 	flex-direction: column;
-	background-color: teal;
 	box-sizing: border-box;
-	border-left: 2px solid black;
-    border-right: 2px solid black;
-    border-bottom:2px solid black; /*bordure du bas */
-    border-top:2px solid black; /* bordure du haut */
+    border-top:2px solid black; /* bordure du haut */	
+    border-bottom:2px solid black; /*bordure du bas */  
+	border-left: 2px solid black;      	
+	background-color: teal;
     padding: 12px; /* Marge intérieure de 12px */    
 	float: left;
 	height: 100%;
 	width: 35%; /* largeur du secteur*/
     word-wrap: break-word;
+    align-items: center;
 }
 
 
@@ -57,22 +70,24 @@ h3
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	border-left: 2px solid black;
-    border-right: 2px solid black;
-    border-bottom:2px solid black; /*bordure du bas */
-    border-top:2px solid black; /* bordure du haut */
+    border-top:2px solid black; /* bordure du haut */	
+    border-bottom:2px solid black; /*bordure du bas */ 
+    border-right: 2px solid black;       	
     padding: 12px; /* Marge intérieure de 12px */    
 	height: 100%;
 	width: 60%; /* largeur du secteur*/
-	background-color: aqua;
     word-wrap: break-word;
 
 
 }
 
 #competences
-{
+{	
 	position: relative;
+	text-align: center;
+	width: 100%;	
+	background-color: black;	
+	color: teal;	
 	overflow: auto;
 	word-wrap: break-word;
 }
@@ -80,13 +95,28 @@ h3
 #contact
 {
 	position: relative;
+	text-align: center;
+	width: 100%;	
+	background-color: black;
+	color: teal;	
 	overflow: auto; /*Coupe le bloc si dépassement des mots du cadre*/
 	word-wrap: break-word;	
 }
 
-#loisirs
+.coordonnees
 {
-	position: relative;	
+	margin-top: 3%;
+	font-size: 20px;
+	font-family : "Times New Roman";  
+}
+
+#loisirs
+{	
+	position: relative;
+	text-align: center;
+	width: 100%;
+	background-color: black;
+	color: teal;
 }
 
 
@@ -101,34 +131,37 @@ h3
 	display: none;
 }
 
+#prenom
+{
+	color: teal
+}
+
 #legendephotodesktop
 {
-	padding-left: 100px;
+	text-align: center;
 }
+
 
 .PhotoProfilDesktop
 {	
-	display: block;
-	margin-left: 50px;
+
+	display: flex;
     overflow:hidden;
+ 	align-items: center;     
     position: relative;
   	width : 200px;
   	height: 200px;    
   	border-radius: 50%
+
 }
 
 .TitreCV
 {
-	background-color: silver;
-	text-decoration: underline; 
+	padding-left: 10%;
+    border-bottom:2px solid teal; /*bordure du bas */
 	font-size: 40px;
 	font-family : "Times New Roman";
-	color: blue;
-}
-
-.descriptifposte
-{
-	font-family : Georgia ;
+	color: black;
 }
 
 .diplome
@@ -141,38 +174,49 @@ h3
 
 .missions
 {
-
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	width: 70%;
 	float: right;
+	font-family: "Courier New";
 }
 
 .etablissement
 {
 	display: flex;
-	color: red;
-	float: right;
-	display: flex;
+	color: black;
 	flex-direction: row;
 	font-size: 16px;
-	width: 72%;
+	width: 100%;
+	margin-bottom: 10px;
+	justify-content: center;
+	font-family: "Comic Sans MS";
+
 }
 
 .date
 {
 	display: flex;
 	flex-direction: row;
-    flex-wrap: nowrap;
-	float: left;	
+    flex-wrap: nowrap;	
 	color: purple;
-	width: 180px;
+	width: 100%;
+}
+
+.fa,.fas
+{
+	margin-top: 5%;
+	opacity: 0.8;
+	font-family : Georgia;
+	font-size:36px;		
 }
 
 
+
 /*       ///////Code pour les petits écrans////////       */
-@media screen and (max-width: 1280px)
+@media screen and (max-width: 1024px)
+
 {
 	body
 	{
@@ -183,7 +227,22 @@ h3
 	{
 		text-align: left;
 		padding-left: 50px;
+	    margin-top: -2%;	
 	}
+
+	h1
+	{
+		font-size: 50px;
+		margin-bottom: 0%;
+    	text-align: center;	
+	}
+
+	h2
+
+	{
+		text-align: center;
+	}
+
 
 	#cvsection
 	{
@@ -197,23 +256,36 @@ h3
 
 	#lisiere
 	{
+		border-left: 2px solid black;
+    	border-right: 2px solid black;
+    	border-bottom:2px solid black; /*bordure du bas */
+    	border-top:2px solid black; /* bordure du haut */
 		position: static;		
-		position: none;
 		flex-direction: column;	
-		background-color: gray;
+		background-color: teal;
     	width: 100%;  
 	}
 
 
 	#informations 
 	{
-		position: static;		
-		position: none;
+		border-left: 2px solid black;
+   		border-right: 2px solid black;
+    	border-bottom:2px solid black; /*bordure du bas */
+    	border-top:2px solid black; /* bordure du haut */		
+		position: static;
 		display: flex;
+		align-items: center;
 		flex-direction: column;	
-		background-color: aqua;		
+		background-color: white;		
     	padding: 12px; /* Marge intérieure de 12px  */ 
     	width: auto;
+	}
+
+	.etablissement
+
+	{
+		justify-content: center;
 	}
 
 	.PhotoProfilDesktop
@@ -223,23 +295,26 @@ h3
 
 	#legendephotodesktop
 	{
-	display: none;
+		display: none;
 	}
-
 
 	#legendephotosmart
 	{
 		display: block;
-		margin-left: 70px;
+		text-align: center;
+
+	}
 
 
+	#blockphoto
+	{
+		align-content: center;
 	}
 
 	.PhotoProfilSmart
 	{
-		display: block;
-   		overflow:hidden;
-   		margin-left: 45px;
+		display: flex;
+		text-align: center;		
     	position: relative;
   		width : 150px;
   		height: 150px;    
@@ -260,6 +335,13 @@ h3
 		color: purple;
 	}
 
+	.descriptifposte p
+
+	{
+		display: flex;
+		justify-content: center;
+	}
+
 	#competences
 	{
 		display: flex;
@@ -272,5 +354,18 @@ h3
 	{
 		text-align: center;		
 	} 
+
+	.missions
+	{
+		margin-left: 20%;
+	}
+
+	.fa,.fas
+	{
+		margin-top: 5%;
+		opacity: 0.8;
+		font-family : Georgia;
+		font-size:36px;		
+	}
 
 }
