--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@ body{
 	margin : 3%;
 }
 
+#recommandation1
+{
+	float: left;
+	width: 50%;
+}
+
+#recommandation2
+{
+	float: right;
+	width: 50%;	
+}
+
 
 /*       ///////Code pour les écrans ordi ////////       */
 
@@ -10,8 +22,7 @@ h1
 {
 	font-size: 50px;
 	margin-bottom: 0%;
-    text-align: left;
-	margin-bottom: -5%;    	
+    text-align: left;   	
 }
 
 h2
@@ -25,7 +36,6 @@ h3
 	font-size: 18px;
 	margin-left: 30%;
     font-weight: normal;
-    margin-top: -1%;
 }
 
 h2 #titreposte
@@ -59,13 +69,11 @@ h2 #titreposte
     border-top:2px solid black; /* bordure du haut */	
     border-bottom:2px solid black; /*bordure du bas */  
 	border-left: 2px solid black;      	
-	background-color: teal;
-    padding: 12px; /* Marge intérieure de 12px */    
+	background-color: teal;   
 	float: left;
 	height: 100%;
 	width: 35%; /* largeur du secteur*/
     word-wrap: break-word;
-    align-items: left;
 }
 
 
@@ -98,14 +106,19 @@ h2 #titreposte
 }
 
 #contact
-{
-	position: relative;
+{	
 	text-align: center;
+	position: relative;
 	width: 100%;	
 	background-color: black;
 	color: teal;	
 	overflow: auto; /*Coupe le bloc si dépassement des mots du cadre*/
 	word-wrap: break-word;	
+}
+
+#blockcontact
+{
+	padding-left: 5%;
 }
 
 .coordonnees
@@ -220,12 +233,38 @@ h2 #titreposte
 
 .fa,.fas
 {
+
 	margin-right: 10%;
 	margin-top: 5%;
 	opacity: 0.8;
 	font-family : Georgia;
 	font-size:36px;		
 }
+
+#fontawesome
+{
+	align-self: center;
+}
+
+#fontawesome i.fa 
+
+{
+  	margin: 0.5em;
+  	border: 2px solid #303030;
+  	border-radius: 50%;
+  	padding: 0.4em;
+}
+
+#fontawesome i.fas 
+{	
+  	margin: 0.5em;
+ 	border: 2px solid #303030;
+ 	border-radius: 50%;
+ 	padding: 0.4em;
+}
+
+
+
 
 
 /*       ///////Code pour les petits écrans////////       */
@@ -285,7 +324,6 @@ h2 #titreposte
 		flex-direction: column;	
 		background-color: teal;
     	width: 100%;  
-    	text-align: left;
 	}
 
 
@@ -335,6 +373,29 @@ h2 #titreposte
 	{
 		align-content: center;
 	}
+
+	#fontawesome
+	{
+		align-self: center;
+	}
+
+	#fontawesome i.fa 
+
+	{
+  		margin: 0.5em;
+  		border: 2px solid #303030;
+  		border-radius: 50%;
+  		padding: 0.2em;
+	}
+
+	#fontawesome i.fas 
+	{	
+  		margin: 0.5em;
+ 		border: 2px solid #303030;
+ 		border-radius: 50%;
+ 		padding: 0.2em;
+	}
+
 
 	.PhotoProfilSmart
 	{
@@ -411,6 +472,16 @@ h2 #titreposte
 		display: flex;
 		align-self: stretch;	
 	}
+
+	#recommandation1
+	{
+		width: 100%;
+	}
+
+	#recommandation2
+		{
+			width: 100%;	
+		}
 
 	.date
 	{
