--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ h2 #titreposte
 	width: 25%;
 }
 
-.fa,.fas
+.titrefontawesome 
 {
 
 	margin-right: 10%;
@@ -243,6 +243,30 @@ h2 #titreposte
 	font-family : Georgia;
 	font-size:36px;		
 }
+
+.loisirsfontawesome 
+{
+
+	margin-right: 10%;
+	margin-top: 5%;
+	opacity: 0.8;
+	font-family : Georgia;
+	font-size:36px;		
+}
+
+
+.icone
+{
+	font-size:36px;	
+}
+
+.point
+{
+	font-size: 15px;
+	padding : 10px;
+	color: teal;
+}
+
 
 #fontawesome
 {
@@ -400,7 +424,7 @@ h2 #titreposte
   		margin: 0.5em;
   		border: 2px solid #303030;
   		border-radius: 50%;
-  		padding: 0.2em;
+  		padding: 0.4em;
 	}
 
 	#fontawesome i.fas 
@@ -408,7 +432,7 @@ h2 #titreposte
   		margin: 0.5em;
  		border: 2px solid #303030;
  		border-radius: 50%;
- 		padding: 0.2em;
+ 		padding: 0.4em;
 	}
 
 
@@ -469,16 +493,13 @@ h2 #titreposte
 		margin-left: 20%;
 	}
 
+
 	.fa,.fas
 	{
 		text-align: center;
-		margin-top: 5%;
-		margin-left: 10%;
-		margin-right: 10%;
-		opacity: 0.8;
-		font-family : Georgia;
-		font-size:36px;		
+	
 	}
+
 
 	.coordonnees
 	{
